@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 
-faecher = {
+infFaecher = {
     "AA"  : "Analysis und Lineare Algebra",
     "AD"  : "Algorithmen und Datenstrukturen",
     "AF"  : "Automatentheorie und Formale Sprachen",
@@ -39,5 +39,86 @@ faecher = {
     "TT"  : "Technik und Technologie",
     "UO"  : "Unternehmensorientierung",
     "VS"  : "Verteilte Systeme",
+    "WP"  : "Wahlpflichtmodul"
 }
+
+etechFaecher = {
+    "AL"  : "Algebra",
+    "AN"  : "Analysis",
+    "AR"  : "Angewandte Regelungstechnik",
+    "AS"  : "Antriebstechnik Mobiler Systeme",
+    "ASS" : "Seminar Autonome Systeme",
+    "AÜ"  : "Analoge Übertragungstechnik",
+    "BA"  : "Bachelorreport",
+    "BK"  : "Kolloquium",
+    "BM"  : "Bildverarbeitung und Mustererkennung",
+    "BS"  : "Betriebssysteme",
+    "BU"  : "Bussysteme und Sensorik",
+    "BW"  : "Projektmanagement",
+    "CA"  : "Calculus",
+    "CO"  : "Codierung",
+    "CR"  : "Communication and Presentation",
+    "CT"  : "Computertechnik",
+    "DB"  : "Datenbanken",
+    "DE"  : "Dezentrale Energieversorgung",
+    "DI"  : "Digitaltechnik",
+    #clash: "DI" : "Digital Circuits",
+    "DN"  : "Dynamische Systeme",
+    "DS"  : "Digitale Hardwaresysteme",
+    "DÜ"  : "Digitale Übertragungstechnik",
+    "DV"  : "Digitale Signalverarbeitung",
+    "DY"  : "Digitale Systeme",
+    "EB"  : "Echtzeitbetriebssysteme",
+    "EE"  : "Introduction Electrical Engineering",
+    "EL"  : "Elektronik",
+    "EN"  : "Energietechnik",
+    "EP"  : "Betriebssysteme und Echtzeitprogrammierung",
+    "ES"  : "Embedded Systems",
+    "ET"  : "Grundlagen Elektrotechnik",
+    #clash: "ET" : "Electronics",
+    "FT"  : "Funktechnik",
+    "GE"  : "Grundlagen Energietechnik",
+    #clash: "GE" : "German",
+    "GN"  : "Grundlagen Nachrichtentechnik",
+    "GR"  : "Grundlagen Regelungstechnik",
+    "IT"  : "Informationstheorie",
+    "KN"  : "Kommunikationsnetze",
+    "LE"  : "Antriebe und Leistungselektronik",
+    "LS"  : "Lern- und Studiermethodik",
+    #clash: "LS"  : "Learning and Study Methods",
+    "MC"  : "Mikrocontrollertechnik",
+    "MF"  : "Mobilfunk",
+    "MS"  : "Methodisches Systemdesign",
+    "MT"  : "Mikrotechnologie",
+    "NS"  : "Numerik und Stochastik",
+    "NV"  : "Numerische Verfahren",
+    "OP"  : "Objektorientierte Programmierung",
+    "PA"  : "Prozessautomatisierung",
+    "PB"  : "Prozessleittechnik und Bussysteme",
+    "PH"  : "Physik",
+    "PO"  : "Wahlpflichtprojekt",
+    "PR"  : "Programmieren",
+    "PS"  : "Projektmanagement und Systemengineering",
+    "RE"  : "Regenerative Energietechnik",
+    "RY"  : "Reglersynthese",
+    "SE"  : "Software Engineering",
+    "SO"  : "Stochastik dynamischer Systeme",
+    #clash: "SO" : "Software Construction",
+    "SP"  : "Digitale Signalverarbeitung auf Signalprozessoren",
+    "SS"  : "Signal- und Systemtheorie",
+    #clash: "SS" : "Entwurf schneller Schaltungen",
+    "ST"  : "Steuerungstechnik",
+    "SV"  : "Signalverarbeitung",
+    "TE"  : "Technisches Englisch",
+    #clash: "TE"  : "Technical Englisch",
+    "TI"  : "Theoretische Informatik",
+    "TK"  : "Telekommunikation",
+    "VD"  : "Besondere Verfahren Digitaler Signalverarbeitung",
+    "VP"  : "Veranstaltung Verbundprojekt Autonome Systeme",
+    "WA"  : "Wissenschaftliches Arbeiten",
+    "WP"  : "Wahlpflichtmodul",
+    "ZR"  : "Zustandsregelung"
+}
+
+faecher = dict(etechFaecher, **infFaecher) # when keys overlapping: inf overwrites etech
 
